# TaxApp

./: .env.production.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/api/: __init__.py  auth.py  calculate.py  export.py  returns.py
backend/auth/: deps.py  security.py
backend/db/: engine.py  models.py
backend/tax_engine/: __init__.py  aggressiveness.py  audit_risk.py  brackets.py  federal.py  models.py  orchestrator.py  state_il.py  state_mn.py
backend/tests/: conftest.py  test_aggressiveness.py  test_api.py  test_audit_risk.py  test_auth.py  test_federal.py  test_integration.py  test_orchestrator.py  test_returns.py  test_state_il.py  test_state_mn.py
backend/tests/fixtures/ty2025/: mfj_100k_mn_2kids.json  self_employed_dual_state.json  single_w2_75k_il.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/results/: layout.tsx  page.tsx
frontend/app/return/: layout.tsx
frontend/app/settings/: page.tsx
frontend/components/: AggressivenessDial.tsx  AuthNav.tsx  ComparisonTable.tsx  FederalCard.tsx  RiskGauge.tsx  StateCard.tsx  StepIndicator.tsx  TaxCards.tsx  WizardShell.tsx
frontend/context/: AuthContext.tsx  ReturnContext.tsx
frontend/lib/: api.ts  types.ts  utils.ts
nginx/: taxapp.conf
scripts/: deploy.sh
(+7 files in other folders)
